feat: add transactions endpoint
